# 7sem

./: README.md
pa/lab5/: 1304_ZaikaTP_lab5.doc  CMakeLists.txt
pa/lab5/src/: main.cpp
pa/labs_done/: README.md  task1.md  task2.md
pa/labs_done/lb1/report/: 1304_Кардаш_лб1.doc
pa/labs_done/lb1/src/: matrix_operations.cpp  matrix_operations.h  multithread_multiply.cpp  process.cpp  thread.cpp
pa/labs_done/lb2/report/: 1304_Кардаш_лб2.doc
pa/labs_done/lb2/src/: DockerfileCompare  DockerfileRough  DockerfileThin  compare.cpp  threadsafe_rough_queue.cpp  threadsafe_thin_queue.cpp
pa/labs_done/lb3/report/: 1304_Кардаш_лб3.doc
pa/labs_done/lb3/src/: Dockerfile  lockFree.h  main.cpp  matrix.h
pa/lb2/: commands  compare.cpp  compare_chart.py  matrix.cpp  threadsafe_thin_queue.cpp
pa/lb3/: commands  compare_chart.py  lockFree.h  lockFree_old.h  main.cpp
pa/lb3_new/: Dockerfile  main.cpp
pa/lb4/: Dockerfile  compare_chart.py  main.cpp
pa/lb4/checker/: checker.cpp
pa/lb4/matrix/: matrix.cpp
pa/lb4/strassenMultiplication/: strassenMultiplication.cpp  strassenMultiplication.hpp
pa/lb4_new/: commands  main.cpp
pa/lb4_new/blocksMultiplication/: blocksMultiplication.cpp
pa/lb4_new/matrix/: matrix.hpp
pa/lb4_new/strassenMultiplication/: strassenMultiplication.cpp
pa/lb4_old/: Dockerfile  commands  main.cpp  matrix.cpp  matrix.h  shtrassen.cpp  shtrassen.h  shtrassen_old.cpp  shtrassen_old.h
pa/lb5/: Dockerfile  commadns  trash
scientific_writing/1304_Kardash_YE/: analogs.md  key_questions.md  paper.docx  paper.md
(+14 files in other folders)
